<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".ui.sobre.SobreFragment">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="333dp"
        android:layout_height="119dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_sobre"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_sinal_visto"
        android:drawableLeft="@drawable/ic_sinal_visto"
        android:drawablePadding="5dp"
        android:text="@string/topico_solucoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_sinal_visto"
        android:drawableLeft="@drawable/ic_sinal_visto"
        android:drawablePadding="5dp"
        android:text="@string/topico_economia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="332dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_sinal_visto"
        android:drawableLeft="@drawable/ic_sinal_visto"
        android:drawablePadding="5dp"
        android:text="@string/topico_especialista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="406dp"
        android:layout_height="205dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/foto_impressao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>